--- a/index.html
+++ b/index.html
@@ -11,8 +11,23 @@
 
 </head>
   <body>
-    
-    
+    <!-- Header Section -->
+    <header class="header">
+      <div class="container">
+        <div class="logo">
+          <img src="images/logo.svg" alt ="Fylo">
+        </div>
+        <nav class = "header__menu" >
+          <ul>
+            <li><a href="">Features</a></li>
+            <li><a href="">Team</a></li>
+            <li><a href="">Sign In</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+ 
 
   </body>
 </html>
