Style: hero markup

--- a/index.html
+++ b/index.html
@@ -27,6 +27,27 @@
       </div>
     </header>
 
+     <!-- Hero Section -->
+     <section class="hero">
+      <container>
+        <div class="hero__image">
+          <img src="images/illustration-intro.png" alt = "illustration-intro">
+        </div>
+        <div class="hero__text">
+          <h1>
+            All your files in one secure location, accessible anywhere.
+          </h1>
+          <p>
+            Fylo stores all your most important files in one secure location. Access them wherever 
+            you need, share and collaborate with friends family, and co-workers.
+          </p>
+        </div>
+        <div class="hero__cta btn">
+          <a href="">Get Started</a>
+        </div>
+      </container>
+    </section>
+
  
 
   </body>
