--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="css/style.css">
   
   <title>Fylo landing page with dark theme and features grid</title>
@@ -18,11 +25,9 @@
           <img src="images/logo.svg" alt ="Fylo">
         </div>
         <nav class = "header__menu" >
-          <ul>
-            <li><a href="">Features</a></li>
-            <li><a href="">Team</a></li>
-            <li><a href="">Sign In</a></li>
-          </ul>
+            <a href="">Features</a>
+            <a href="">Team</a>
+            <a href="">Sign In</a>
         </nav>
       </div>
     </header>
