--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Header Section -->
     <header class="header">
       <div class="container">
-        <div class="logo">
+        <div class="header__logo">
           <img src="images/logo.svg" alt ="Fylo">
         </div>
         <nav class = "header__menu" >
@@ -36,7 +36,7 @@
      <section class="hero">
       <container>
         <div class="hero__image">
-          <img src="images/illustration-intro.png" alt = "illustration-intro">
+          <img src="" alt = "illustration-intro">
         </div>
         <div class="hero__text">
           <h1>
