Feat: header menu hover

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="header">
       <div class="container">
         <div class="header__logo">
-          <img src="images/logo.svg" alt ="Fylo">
+          <a href="#"><img src="images/logo.svg" alt ="Fylo"></a>
         </div>
         <nav class = "header__menu" >
             <a href="">Features</a>
