[WIP] Hero section styles

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <!-- Header Section -->
     <header class="header">
-      <div class="container">
+      <div class="container container_mobile_PX">
         <div class="header__logo">
           <a href="#"><img src="images/logo.svg" alt ="Fylo"></a>
         </div>
@@ -34,9 +34,9 @@
 
      <!-- Hero Section -->
      <section class="hero">
-      <container>
+      <div class="container container_mobile_PX ">
         <div class="hero__image">
-          <img src="" alt = "illustration-intro">
+          <img src="/images/illustration-intro.png" alt = "illustration-intro">
         </div>
         <div class="hero__text">
           <h1>
@@ -50,7 +50,7 @@
         <div class="hero__cta btn">
           <a href="">Get Started</a>
         </div>
-      </container>
+      </div>  
     </section>
 
  
