--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
       </div>  
     </section>
 
-    <!-- Hero Section -->
-    <setion class="feature">
-      <div class="container">
+    <!-- Feature Section -->
+    <section class="feature">
+      <div class="container container_mobile_PX">
         
         <div class="feature__items">
           <img src="/images/icon-access-anywhere.svg" alt="access everywhere">
@@ -70,8 +70,25 @@
           <p>2-factor authentication and user-controlled encryption are just a couple of the security 
           features we allow to help secure your files.</p>
         </div>
+
+        <div class="feature__items">
+          <img src="/images/icon-access-anywhere.svg" alt="access everywhere">
+          <h2>Access your files, anywhere</h2>
+          <p>The ability to use a smartphone, tablet, or computer to access your account means your 
+          files follow you everywhere.</p>
+        </div>
+
+        <div class="feature__items">
+          <img src="/images/icon-security.svg" alt="security">
+          <h2>Security you can trust</h2>
+          <p>2-factor authentication and user-controlled encryption are just a couple of the security 
+          features we allow to help secure your files.</p>
+        </div>
+
       </div>
-    </setion>
+  
+    </section>
+
   </body>
 </html>
 
