Style: markup testimonial section

--- a/index.html
+++ b/index.html
@@ -112,10 +112,55 @@
 
           <div class="fylo-work_link">
             <a href="#">See how Fylo works</a>
-            <img src="/images/icon-arrow.svg" alt=""
+            <img src="/images/icon-arrow.svg" alt=""/>
           </div>
+        </div>
+      </div>
+    </section>
 
-          
+    <section class="testmonial mainBgColor">
+      <div class="container">
+        
+        <div class="testimonial__card">
+          <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+            become a well-oiled collaboration machine.</p>
+          <div class="bio">
+            <div class="bio__image">
+              <img src="/images/profile-1.jpg" alt="Satish Patel">
+            </div>
+            <div class="bio__detail">
+              <p class="name">Satish Patel</p>
+              <p class="position">Founder & CEO, Huddle</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="testimonial__card">
+          <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+            become a well-oiled collaboration machine.</p>
+          <div class="bio">
+            <div class="bio__image">
+              <img src="/images/profile-2.jpg" alt="Bruce McKenzie">
+            </div>
+            <div class="bio__detail">
+              <p class="name">Bruce McKenzie</p>
+              <p class="position">Founder & CEO, Huddle</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="testimonial__card">
+          <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+            become a well-oiled collaboration machine.</p>
+          <div class="bio">
+            <div class="bio__image">
+              <img src="/images/profile-3.jpg" alt="Iva Boyd">
+            </div>
+            <div class="bio__detail">
+              <p class="name">Iva Boyd</p>
+              <p class="position">Founder & CEO, Huddle</p>
+            </div>
+          </div>
         </div>
 
       </div>
@@ -125,23 +170,17 @@
 </html>
 
 
-Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-become a well-oiled collaboration machine.
 
-Satish Patel
-Founder & CEO, Huddle
 
-Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-become a well-oiled collaboration machine.
 
-Bruce McKenzie
-Founder & CEO, Huddle
 
-Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-become a well-oiled collaboration machine.
 
-Iva Boyd
-Founder & CEO, Huddle
+
+
+
+
+
+
 
 Get early access today
 
