Style (mobile): [WIP] style testimonial section

--- a/index.html
+++ b/index.html
@@ -121,23 +121,30 @@
     <section class="testmonial mainBgColor">
       <div class="container">
         
-        <div class="testimonial__card">
-          <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-            become a well-oiled collaboration machine.</p>
+        <div class="testimonial__card one">
+          <div class="testimonial__card__text">
+            <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+          </div>
+
           <div class="bio">
             <div class="bio__image">
               <img src="/images/profile-1.jpg" alt="Satish Patel">
             </div>
+
             <div class="bio__detail">
               <p class="name">Satish Patel</p>
               <p class="position">Founder & CEO, Huddle</p>
             </div>
+
+            </div>
           </div>
         </div>
 
-        <div class="testimonial__card">
-          <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-            become a well-oiled collaboration machine.</p>
+        <div class="testimonial__card two">
+          <div class="testimonial__card__text">
+            <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+          </div>
+
           <div class="bio">
             <div class="bio__image">
               <img src="/images/profile-2.jpg" alt="Bruce McKenzie">
@@ -149,9 +156,11 @@
           </div>
         </div>
 
-        <div class="testimonial__card">
-          <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-            become a well-oiled collaboration machine.</p>
+        <div class="testimonial__card three">
+          <div class="testimonial__card__text">
+            <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+          </div>
+
           <div class="bio">
             <div class="bio__image">
               <img src="/images/profile-3.jpg" alt="Iva Boyd">
