--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         </div>
 
         <div class="productive__text">
+          
           <h2>Stay productive, wherever you are</h2>
 
           <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
@@ -114,28 +115,27 @@
             <a href="#">See how Fylo works</a>
             <img src="/images/icon-arrow.svg" alt=""/>
           </div>
+
         </div>
+
       </div>
     </section>
 
-    <section class="testmonial mainBgColor">
+    <!-- Testimonial Section -->
+    <section class="testimonial mainBgColor">
       <div class="container">
         
         <div class="testimonial__card one">
           <div class="testimonial__card__text">
             <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
           </div>
-
           <div class="bio">
             <div class="bio__image">
               <img src="/images/profile-1.jpg" alt="Satish Patel">
             </div>
-
             <div class="bio__detail">
               <p class="name">Satish Patel</p>
               <p class="position">Founder & CEO, Huddle</p>
-            </div>
-
             </div>
           </div>
         </div>
@@ -144,7 +144,6 @@
           <div class="testimonial__card__text">
             <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
           </div>
-
           <div class="bio">
             <div class="bio__image">
               <img src="/images/profile-2.jpg" alt="Bruce McKenzie">
@@ -160,7 +159,6 @@
           <div class="testimonial__card__text">
             <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
           </div>
-
           <div class="bio">
             <div class="bio__image">
               <img src="/images/profile-3.jpg" alt="Iva Boyd">
