--- a/index.html
+++ b/index.html
@@ -173,6 +173,25 @@
       </div>
     </section>
 
+    <!-- Testimonial Section -->
+
+    <section class="signup">
+      <div class="container">
+
+        <div class="signup__text">
+          <h2>Get early access today</h2>
+          <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
+        </div>
+
+        <form class="signup__formaction="">
+          <input type="email" name ="email" id="email" placeholder="email@example.com">
+          <input type="submit" class="btn" value="Get Started For Free"> 
+        </form>
+
+
+      </div>
+    </section>
+
   </body>
 </html>
 
@@ -189,10 +208,9 @@
 
 
 
-Get early access today
 
-It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
-questions, our support team would be happy to help you.
+
+
 
 Get Started For Free
 
