--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <div class="productive__text">
           
-          <h2>Stay productive, wherever you are</h2>
+          <h2 class ="small">Stay productive, wherever you are</h2>
 
           <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
 
@@ -175,20 +175,19 @@
 
     <!-- Testimonial Section -->
 
-    <section class="signup">
-      <div class="container">
+    <section class="signup mainBgColor ">
+      <div class="container container_mobile_PX">
 
-        <div class="signup__text">
-          <h2>Get early access today</h2>
+        <div class="signup__container">
+          <h2 class ="small">Get early access today</h2>
+          
           <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
+
+          <form class="signup__form ">
+            <input type="email" name ="email" id="email" placeholder="email@example.com">
+            <input type="submit" class ="btn" value="Get Started For Free"> 
+          </form>
         </div>
-
-        <form class="signup__formaction="">
-          <input type="email" name ="email" id="email" placeholder="email@example.com">
-          <input type="submit" class="btn" value="Get Started For Free"> 
-        </form>
-
-
       </div>
     </section>
 
